styling of landing page and adding of info

--- a/youngFarmers.html
+++ b/youngFarmers.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YF Hub</title>
+    <link rel="stylesheet" href="/styles/youngFarmers.css">
 </head>
 <body>
     <h1>Welcome to the YF Hub</h1>
+    
 </body>
 </html>
