--- a/index.html
+++ b/index.html
@@ -1,162 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Young4Chick</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/index.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Young4ChickS</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/index.css" />
 </head>
 
 <body>
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/images/chicklogo.jpeg" alt="Logo" width="60" height="54"
-                    class="d-inline-block align-text-top">
-                Young4Chick
-            </a>
-            <!-- Button to open the modal login form -->
-        <button onclick="document.getElementById('id01').style.display='block'" id="homepage-login-btn" class="btn btn-light">Login</button>
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+    <img src="/images/chicklogo.jpeg" alt="Logo" width="60" height="54">
+    <span class="navbar-brand-text">Young4Chick</span>
+</a>
+      <button onclick="document.getElementById('login-modal').style.display='block'" id="homepage-login-btn" class="btn btn-light">Login</button>
 
-         <!-- The Modal -->
-        <div id="id01" class="modal">
-            <span onclick="document.getElementById('id01').style.display='none'" class="close"
-                title="Close Modal">&times;</span>
+      <div id="login-modal" class="modal">
+        <span onclick="document.getElementById('login-modal').style.display='none'" class="close" title="Close Modal">&times;</span>
+        <form class="modal-content animate" id="login-form">
+          <div class="container">
+            <label for="login-username"><b>Username</b></label>
+            <input type="text" placeholder="Enter Username" name="uname" class="form-control" id="login-username" required />
 
-            <!-- Modal Content -->
-            <form class="modal-content animate" id="login-form">
+            <label for="login-password"><b>Password</b></label>
+            <input type="password" placeholder="Enter Password" name="psw" class="form-control" id="login-password" required />
 
-                <div class="container">
-                    <label for="uname"><b>Username</b></label>
-                    <input type="text" placeholder="Enter Username" name="uname" class="uname" required>
-
-                    <label for="psw"><b>Password</b></label>
-                    <input type="password" placeholder="Enter Password" name="psw" class="psw" required>
-
-                    <button id="login-btn" type="submit">Login</button><br>
-                </div>
-            </form>
-        </div>
-        </div>
-    </nav>
-    <br>
-    <div class="row">
-        <div class="col-4">
-            <div id="list-example" class="list-group">
-                <a class="list-group-item list-group-item-action" href="#list-item-1">Home</a>
-                <a class="list-group-item list-group-item-action" href="#list-item-2">About Us</a>
-                <a class="list-group-item list-group-item-action" href="#list-item-3">Chickstarter Kit</a>
-                <a class="list-group-item list-group-item-action" href="#list-item-4">Register as a Young Farmer</a>
-            </div>
-        </div>
-        <div class="col-8">
-            <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true"
-                class="scrollspy-example" tabindex="0">
-                <h4 id="list-item-1">Home</h4>
-                <p>...</p>
-                <h4 id="list-item-2">About Us</h4>
-                <p>...</p>
-                <h4 id="list-item-3">Chickstarter Kit</h4>
-                <p>...</p>
-                <h4 id="list-item-4">Register as a Young Farmer</h4>
-                <p>must be between 20-30 years old</p>
-                <br>
-                <form class="row g-3 needs-validation" novalidate>
-                    <div class="col-md-4">
-                        <label for="validationCustom01" class="form-label">First name</label>
-                        <input type="text" class="form-control" id="validationCustom01" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustom02" class="form-label">Last name</label>
-                        <input type="text" class="form-control" id="validationCustom02" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustomUsername" class="form-label">Username</label>
-                        <div class="input-group has-validation">
-                            <span class="input-group-text" id="inputGroupPrepend">@</span>
-                            <input type="text" class="form-control" id="validationCustomUsername"
-                                aria-describedby="inputGroupPrepend" required>
-                            <div class="invalid-feedback">
-                                Please choose a username.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <label for="validationCustom03" class="form-label">Full Address</label>
-                        <input type="text" class="form-control" id="validationCustom03" required>
-                        <div class="invalid-feedback">
-                            Please provide a valid address.
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustom04" class="form-label">Phone Number</label>
-                        <input type="text" class="form-control" id="validationCustom04" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustom05" class="form-label">Email</label>
-                        <input type="text" class="form-control" id="validationCustom05" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustom06" class="form-label">Age</label>
-                        <input type="number" class="form-control" id="validationCustom06" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustom07" class="form-label">Gender</label><br>
-                        <input type="radio" id="validationCustom07" required> Male<br>
-                        <input type="radio" id="validationCustom07"> Female<br>
-                        <input type="radio"> Other
-
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustom08" class="form-label">National Insurance Number (NIN)</label>
-                        <input type="text" class="form-control" id="validationCustom08" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustom09" class="form-label">Recommender's name</label>
-                        <input type="text" class="form-control" id="validationCustom09" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <label for="validationCustom10" class="form-label">Recommender's NIN </label>
-                        <input type="text" class="form-control" id="validationCustom10" required>
-                        <div class="valid-feedback">
-                            Looks good!
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <button class="btn btn-light" type="submit" id="submit-btn">Submit form</button>
-                    </div>
-                </form>
-                
-
-            </div>
-        </div>
+            <button id="login-btn" type="submit" class="btn btn-light mt-2">Login</button>
+          </div>
+        </form>
+      </div>
     </div>
-    <script>https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js
-    </script>
-    <script src="/js/index.js"></script>
-</body>
+  </nav>
 
+  <br />
+  <div class="row">
+    <div class="col-4">
+      <div id="list-example" class="list-group">
+        <a class="list-group-item list-group-item-action" href="#home-section">Home</a>
+        <a class="list-group-item list-group-item-action" href="#about-section">About Us</a>
+        <a class="list-group-item list-group-item-action" href="#kit-section">Chickstarter Kit</a>
+        <a class="list-group-item list-group-item-action" href="#register-section">Register as a Young Farmer</a>
+      </div>
+    </div>
+
+    <div class="col-8">
+      <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
+        <h4 id="home-section">Home</h4>
+        <p>Welcome to Young4Chick, a youth-powered poultry initiative equipping the next generation of farmers with the resources, knowledge, and support they need to thrive! We’re building a vibrant ecosystem of young entrepreneurs aged 18–30 who are ready to transform poultry farming across Uganda. <br> <br> Whether you're just curious or already raising your first chicks, Young4Chick is your launchpad for sustainable agricultural impact and economic empowerment!</p>
+
+        <h4 id="about-section">About Us</h4>
+        <p>Young4Chick was birthed out of a vision to bridge the gap between youth unemployment and agriculture by providing meaningful pathways into poultry farming. Founded by a youth MP passionate about rural innovation, the initiative connects young people with starter chicks, training, and ongoing mentorship. <br> <br>Through collaboration with brooder managers, sales reps, and agricultural experts, we ensure every registered young farmer gets the support they need to grow from beginner to business-ready.</p>
+
+        <h4 id="kit-section">Chickstarter Kit</h4>
+        <p><p>
+    <strong>Chickstarter Kit: How to Get Started</strong><br><br>
+
+    <strong>Step 1: Register as a Young Farmer</strong><br>
+    To be eligible, you must be between 18–30 years old. Fill out the registration form and once verified, you're eligible to submit chick requests once every 4 months.<br><br>
+
+    <strong>Step 2: Request for Chicks</strong><br>
+    Only registered farmers can request chicks. Fill in the chick request form stating the number of chicks (100 for starters, up to 500 for returning farmers), the type of chicks (Broilers or Layers), and your farmer status (Starter or Returning). Your request will be sent to the Brooder Manager for approval.<br><br>
+
+    <strong>Step 3: Wait for Approval</strong><br>
+    The Brooder Manager checks available stock and approves valid requests. Once your request is approved, the system updates to reflect reduced stock and your request will be marked as "Ready for Pickup".<br><br>
+
+    <strong>Step 4: Pick Up Chicks & Feed</strong><br>
+    All chicks cost UGX 1,650 each, regardless of type. Each farmer is also eligible for up to 2 bags of feed, which are payable after 2 months. Once you receive your chicks, a Sales Rep will confirm the handover and record it as a complete sale in the system!<br><br>
+
+    This kit is your launchpad into the poultry world—designed to help you build sustainable wealth through farming, what are you waiting for?
+</p>
+</p>
+
+        <h4 id="register-section">Register as a Young Farmer</h4>
+        <p>You must be between 18–30 years old to register.</p>
+
+        <form class="row g-3 needs-validation" id="young-farmer-form" novalidate>
+          <div class="col-md-4">
+            <label for="first-name" class="form-label">First Name</label>
+            <input type="text" class="form-control" id="first-name" required />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+
+          <div class="col-md-4">
+            <label for="last-name" class="form-label">Last Name</label>
+            <input type="text" class="form-control" id="last-name" required />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+
+          <div class="col-md-4">
+            <label for="username" class="form-label">Username</label>
+            <div class="input-group has-validation">
+              <span class="input-group-text">@</span>
+              <input type="text" class="form-control" id="username" required />
+              <div class="invalid-feedback">Please choose a username.</div>
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <label for="address" class="form-label">Full Address</label>
+            <input type="text" class="form-control" id="address" required />
+            <div class="invalid-feedback">Please provide a valid address.</div>
+          </div>
+
+          <div class="col-md-4">
+            <label for="phone" class="form-label">Phone Number</label>
+            <input type="text" class="form-control" id="phone" required />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+
+          <div class="col-md-4">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" required />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+
+          <div class="col-md-4">
+            <label for="age" class="form-label">Age</label>
+            <input type="number" class="form-control" id="age" required />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+
+          <div class="col-md-4">
+            <label class="form-label">Gender</label><br />
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="gender" id="gender-male" value="Male" required />
+              <label class="form-check-label" for="gender-male">Male</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="gender" id="gender-female" value="Female" />
+              <label class="form-check-label" for="gender-female">Female</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input class="form-check-input" type="radio" name="gender" id="gender-other" value="Other" />
+              <label class="form-check-label" for="gender-other">Other</label>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <label for="nin" class="form-label">National ID Number (NIN)</label>
+            <input type="text" class="form-control" id="nin" required />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+
+          <div class="col-md-4">
+            <label for="recommender-name" class="form-label">Recommender's Name</label>
+            <input type="text" class="form-control" id="recommender-name" required />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+
+          <div class="col-md-4">
+            <label for="recommender-nin" class="form-label">Recommender's NIN</label>
+            <input type="text" class="form-control" id="recommender-nin" required />
+            <div class="valid-feedback">Looks good!</div>
+          </div>
+
+          <div class="col-12">
+            <button class="btn btn-light" type="submit" id="submit-registration">Submit Form</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/js/index.js"></script>
+</body>
 </html>
