added myfarm section

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
           <div class="col-md-4">
             <label for="age" class="form-label">Age</label>
-            <input type="number" class="form-control" id="age" required />
+            <input type="number" class="form-control" id="age" required min="18" max="30"/>
             <div class="valid-feedback">Looks good!</div>
           </div>
 
