--- a/youngFarmers.html
+++ b/youngFarmers.html
@@ -1,13 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YF Hub</title>
-    <link rel="stylesheet" href="/styles/youngFarmers.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>YF Hub</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles/youngFarmers.css">
 </head>
+
 <body>
-    <h1>Welcome to the YF Hub</h1>
-    
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand d-flex align-items-center gap-2" href="#">
+        <img src="/images/chicklogo.jpeg" alt="Logo" width="60" height="54">
+        <span class="navbar-brand-text">Young4Chick</span>
+      </a>
+      <a href="/index.html"><button class="btn btn-light">Logout</button></a>
+    </div>
+  </nav>
+
+  <div class="container mt-4">
+    <h1 class="mb-4">Welcome to the YF Hub</h1>
+    <div class="row">
+      <div class="col-md-6 mb-4">
+        <form>
+          <h2>Chick & Feed Request Form</h2>
+          <label>First Name</label>
+          <input type="text" class="form-control mb-3">
+
+          <label>Last Name</label>
+          <input type="text" class="form-control mb-3">
+
+          <label>NIN Number</label>
+          <input type="text" class="form-control mb-3">
+
+          <label>Chick Type</label>
+          <select class="form-select mb-3">
+            <option></option>
+            <option>Broiler</option>
+            <option>Layer</option>
+          </select>
+
+          <label>Farmer Status</label>
+          <select class="form-select mb-3">
+            <option></option>
+            <option>Starter Farmer</option>
+            <option>Returning Farmer</option>
+          </select>
+
+          <label>Chick Category</label>
+          <select class="form-select mb-3">
+            <option></option>
+            <option>Exotic</option>
+            <option>Local</option>
+          </select>
+
+          <label>Quantity</label>
+          <input type="number" class="form-control mb-3">
+
+          <label>Feed Amount</label>
+          <input type="number" class="form-control mb-3">
+
+          <button type="submit" class="btn btn-light">Submit Request</button>
+        </form>
+      </div>
+
+      <div class="col-md-6 mb-4">
+        <ul class="nav nav-tabs" id="orderTabs" role="tablist">
+          <li class="nav-item" role="presentation">
+            <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#active-orders" type="button">Active Orders</button>
+          </li>
+          <li class="nav-item" role="presentation">
+            <button class="nav-link" data-bs-toggle="tab" data-bs-target="#order-history" type="button">Order History</button>
+          </li>
+        </ul>
+        <div class="tab-content mt-3">
+          <div class="tab-pane fade show active" id="active-orders">
+            <div class="card p-3">
+              <p>No active orders yet.</p>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="order-history">
+            <div class="card p-3">
+              <p>No order history available.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mb-5">
+      <h2 class="mb-4">My Farm</h2>
+      <form>
+        <div class="row g-3">
+          <div class="col-md-6">
+            <div class="card p-3">
+              <label class="form-label">Farm Name</label>
+              <input type="text" class="form-control" placeholder="e.g. GreenFields Ltd" />
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="card p-3">
+              <label class="form-label">Farm Location</label>
+              <input type="text" class="form-control" placeholder="e.g. Wakiso District" />
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="card p-3">
+              <label class="form-label">Farm Size (acres)</label>
+              <input type="number" class="form-control" step="0.1" min="0" placeholder="e.g. 1.5" />
+            </div>
+          </div>
+
+          <div class="col-md-6">
+            <div class="card p-3">
+              <label class="form-label">Farm Type</label>
+              <select class="form-select">
+                <option selected disabled>Select Type</option>
+                <option value="Broiler">Broiler</option>
+                <option value="Layer">Layer</option>
+                <option value="Mixed">Mixed</option>
+                <option value="Other">Other</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="col-12">
+            <div class="card p-3">
+              <label class="form-label">Additional Notes / Questions</label>
+              <textarea class="form-control" rows="3" placeholder="e.g. I need help with feed planning..."></textarea>
+            </div>
+          </div>
+
+          <div class="col-12 text-end">
+            <button type="submit" class="btn btn-primary mt-3">Save Farm Info</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
